# KDA-GameEngine

./: CMakeLists.txt  README.md  Диаграмма без названия.drawio
engine/: CMakeLists.txt  engine.cpp
engine/core/: CMakeLists.txt
engine/core/graphics/: CMakeLists.txt  kda_graphics.cpp
engine/core/logging/: CMakeLists.txt  kda_logging.cpp
engine/core/scripts/: CMakeLists.txt  kda_scripts.cpp
engine/core/scripts/lua/: CMakeLists.txt
engine/core/scripts/public_interface/: kda_scripts.h
engine/core/sprite/: CMakeLists.txt  kda_sprite.cpp
engine/core/sprite/public_interface/: kda_sprite.h
engine/core/window/: CMakeLists.txt  kda_window.cpp
engine/core_interface/: kda_graphics.h  kda_logging.h  kda_scripts.h  kda_window.h
extensions/: CMakeLists.txt
extensions/template/: CMakeLists.txt
shaders/: pixel.p  vertex.v
